	PR c++/18731 	* parser.c (cp_parser_class_head): Reject typedef-name in class head.

* g++.dg/parser/struct-1.C: New test.
	* g++.dg/parser/struct-2.C: New test.
	* g++.dg/parser/struct-3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91993 138bc75d-0d04-0410-961f-82ee72b054a4